Add the spec v2 changes